# ar-flares

./: .gitignore  ANALYSIS_VIDEO_SEQUENCES.md  AUGMENTATION_COMPARISON.md  QUICKSTART_16FRAMES.md  README.md  RESEARCH_NOTES.md  delete_manifest_summary.csv  pyproject.toml  requirements.txt  tiff_regroup.py
classifier/: config.py  datasets.py  evaluate.py  losses.py  metrics.py  train.py
classifier_NN/: Build_dataframes.py  README.md  README_PHYSICS.md  check_training.sh  config.py  datasets.py  debug_mixup.py  flow_examples.py  losses.py  metrics.py  model_training.py  models.py  reevaluate_checkpoint.py  resume_experiment.py  run_experiments.py  run_experiments_A1.py  run_experiments_A1_vgg_paper.py  run_experiments_A2.py  run_experiments_seq.py  run_experiments_seq_6h.py  run_experiments_seq_vit.py  run_experiments_v2.py  run_physics_attention.py  run_resume_A1_20_epochs.py  smoke_test.py  start_training.sh  train.py
classifier_SVM/: AR_Classifier.py  data_analysis.py
classifier_VGG/: model_training.py  test_indexing.py  transfer_learning.ipynb  vgg_training.py  wds_loader.py
classifier_refactored/: README.md
compute_canada/: README_compute_canada.md
general_code/: customize_dataset.py
jobs/: train_vgg.sh
legacy/: README.md  draw_two_stream.py  model_training_backup.py  train_balanced_convnext.py
preprocessing/: data_analysis.ipynb  wds_loader.py  wds_loader_optical.py
results/: svm_performance.txt
scripts/: a1_2d_aug_screen_224_a100.slurm  a1_2d_rerun_screen_224_a100.slurm  a1_backbone_compare_224_a100.slurm  a1_mvitv1_notemporal_probe_a100.slurm  (+85 more)
(+27 files in other folders)
