[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-flares"
version = "0.1.0"
description = "AR-flares: modular PyTorch pipeline for solar flare classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "timm>=0.9.12",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "pillow>=10.0.0",
  "pytz>=2023.3",
  "tqdm>=4.66.0",
  "webdataset>=0.2.86",
  "fvcore",
  "iopath",
  "pytorchvideo",
  "peft",
]

[tool.setuptools]
packages = { find = { include = ["classifier_NN*"] } }






